Merged revisions 64968,64971 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r64968 | thomas.heller | 2008-07-15 19:03:08 +0200 (Di, 15 Jul 2008) | 4 lines

  Issue #3258: Fix an assertion error (in debug build) and a crash (in
  release build) when the format string of a pointer to an incomplete
  structure is created.
........
  r64971 | thomas.heller | 2008-07-15 19:19:50 +0200 (Di, 15 Jul 2008) | 2 lines

  NEWS entry for #issue 3258.
........